<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:elevation="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_baseline_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/display_login"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="@+id/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivCircleImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="10dp"
        android:src="@drawable/ic_avarta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.105"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_title"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCircleImageView" />

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvId" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login"
        android:textSize="16sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLoginTitle"
        app:layout_constraintStart_toEndOf="@+id/tvLoginTitle"
        app:layout_constraintTop_toTopOf="@+id/tvLoginTitle"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvDisplayLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/display_login_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

    <TextView
        android:id="@+id/tvDisplayLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="display_login"
        android:textSize="16sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDisplayLoginTitle"
        app:layout_constraintStart_toEndOf="@+id/tvDisplayLoginTitle"
        app:layout_constraintTop_toTopOf="@+id/tvDisplayLoginTitle"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvGravatarIdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/gravatar_id_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDisplayLoginTitle" />

    <TextView
        android:id="@+id/tvGravatarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="gravatar_id"
        android:textSize="16sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvGravatarIdTitle"
        app:layout_constraintStart_toEndOf="@+id/tvGravatarIdTitle"
        app:layout_constraintTop_toTopOf="@+id/tvGravatarIdTitle"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tvRepoNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/repo_name_title"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGravatarIdTitle" />

    <TextView
        android:id="@+id/tvRepoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="repo_name"
        android:textSize="16sp"
        android:layout_marginStart="20sp"
        android:ellipsize="end"
        android:maxEms="10"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@+id/tvRepoNameTitle"
        app:layout_constraintStart_toEndOf="@+id/tvRepoNameTitle"
        app:layout_constraintTop_toTopOf="@+id/tvRepoNameTitle"
        tools:ignore="HardcodedText" />


    <TextView
        android:id="@+id/tvCreatedAtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/created_at"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepoNameTitle" />

    <TextView
        android:id="@+id/tvCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="created_at"
        android:textSize="16sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCreatedAtTitle"
        app:layout_constraintStart_toEndOf="@+id/tvCreatedAtTitle"
        app:layout_constraintTop_toTopOf="@+id/tvCreatedAtTitle"
        tools:ignore="HardcodedText" />


</androidx.constraintlayout.widget.ConstraintLayout>